--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#c3a9f6</color>
+    <color name="colorPrimaryDark">#a3b4fd</color>
+    <color name="colorAccent">#a4d5fe</color>
 </resources>
